# can-hub

./: .dockerignore  .gitignore  AUDIT.md  CLAUDE.md  CMakeLists.txt  CODE_STYLE.md  CONTRIBUTING.md  HARDWARE_ESP32_AGENT.md  LICENSE.commercial  Makefile  NOTICE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  epic_feature.yml  tech_debt.yml
.github/workflows/: ci.yml  release.yml
cmake/: openssl.cmake  toolchain-arm64.cmake  toolchain-armhf.cmake  toolchain-mingw-x86_64.cmake  toolchain-musl-static.cmake  toolchain-x86_64.cmake
doc/: README.md  agent.md  cli.md  client.md  design.md  hub.md  installation.md  libcanhub.md  protocol.md  quick-start.md  security.md  web-admin-build-log.md  web-admin-review.md  web.md  wire-change-runbook.md
docker/: static-debug.Dockerfile  static.Dockerfile  wheel.Dockerfile
examples/: canhub_dump.c
include/: canhub.h
packaging/: agent.conf  cpack-deb.cmake  hub.conf  socketcand.conf  web.conf
packaging/completions/bash/: can-hub  can-hub-agent  can-hub-cli  can-hub-client  can-hub-web
packaging/completions/zsh/: _can-hub  _can-hub-agent  _can-hub-cli  _can-hub-client  _can-hub-web
packaging/debian/agent/: conffiles  postinst  postrm  prerm
packaging/systemd/: can-hub-agent.service  can-hub-socketcand.service  can-hub-web.service  can-hub.service
python/: .gitignore  README.md  pyproject.toml  setup.py
python/canhub/: __init__.py  __main__.py  _native.py  bus.py  fingerprint.py
python/tests/: conftest.py  test_bus.py  test_native.py
scripts/: build-python-wheel-windows.sh  build-python-wheel.sh
spike/e0-quic-datagram/: .gitignore  Makefile  RESULTS.md  plain_tunnel.c  run-bench.sh  run-compare.sh  tunnel  tunnel.c
src/: version.c  version.h
src/agent/: agent.c  agent.h  agent_app.c  agent_app.h
src/application/: agent.c  agent.h  broker.c  broker.h
src/client/: client.c  client.h
src/domain/: channel_map.c  client_session.c  frame_routes.c  frame_routes.h  interface_registry.c  peer_directory.c  peer_directory.h  reconnect_backoff.c
src/hub/: broker.c  broker.h  hub_app.c  hub_app.h
src/mirror/: mirror_app.c  mirror_app.h
src/ports/: can_events.h  can_port.h  transport_events.h
src/protocol/: admin_message.c  admin_message.h  control_buffer.h  error_message.c  error_message.h  frame_message.c  frame_message.h  hello_message.c  hello_message.h  ifconfig_message.c  ifconfig_message.h  interface_name.c  interface_name.h  interface_status_message.c  interface_status_message.h  list_message.c  list_message.h  message_header.c  message_header.h  open_message.c  open_message.h  register_message.c  register_message.h  subscribe_message.c  subscribe_message.h  wire.c  wire.h
src/shared/: egress_shaper.c  egress_shaper.h
src/socketcand/: socketcand_app.c  socketcand_app.h  socketcand_bridge.c  socketcand_bridge.h
test/: CMakeLists.txt
test/e2e/: BenchKeywords.py  README.md  WebKeywords.py  bench_variables.py  e2e_refactor.md
test/e2e/docker/: Dockerfile
test/e2e/lib/: __init__.py  bench.py  binaries.py  can_agent.py  can_cli.py  can_client.py  can_hub.py  can_hub_web.py  configuration.py  metrics.py  process.py  rest.py  rows.py  server.py  shell.py
test/e2e/performance/: RESULTS.md  protocol_bench.robot  scale_bench.robot
test/e2e/scripts/: bench_send.py  consume.py  latency_send.py  produce.py  pycan_probe.py
test/e2e/tests/: backpressure.robot  client.robot  client_reattach.robot  fairness.robot  firmware_integrity.robot  latency.robot  libcanhub.robot  python_can.robot  quic_mtu.robot  reconnect.robot  reorder.robot  smoke.robot  socketcand.robot  socketcand_write_burst.robot  tcp_stream_burst.robot  web.robot
test/mocks/: CMakeLists.txt  authorization_mock.c  authorization_mock.h  broker_driver.c  broker_driver.h  can_port_mock.c  can_port_mock.h  hub_transport_port_mock.c  hub_transport_port_mock.h  identity_store_mock.c  identity_store_mock.h  socketcand_server_port_mock.c  socketcand_server_port_mock.h  transport_port_mock.c  transport_port_mock.h
test/unit/: CMakeLists.txt
test/unit/adapters/: test_quic_control_channel.cpp
test/unit/agent/: test_agent.cpp
test/unit/agent/domain/: test_channel_map.cpp  test_echo_correlator.cpp  test_reconnect_backoff.cpp  test_tx_pacer.cpp
test/unit/application/: test_agent.cpp  test_broker.cpp
test/unit/client/: test_client.cpp
test/unit/domain/: test_channel_map.cpp  test_client_session.cpp  test_frame_routes.cpp  test_interface_registry.cpp  test_reconnect_backoff.cpp
test/unit/hub/: test_broker.cpp
test/unit/hub/domain/: test_admin_views.cpp  test_client_session.cpp  test_egress_queue.cpp  test_egress_shaper.cpp  test_frame_routes.cpp  test_hub_peer.cpp  test_interface_registry.cpp
test/unit/mirror/: test_mirror_app.cpp
test/unit/platform/: test_connect_url.cpp  test_identity_database.cpp  test_listen_endpoint.cpp  test_log.cpp  test_message_framer.cpp  test_quic_control_channel.cpp  test_quic_datagram_backlog.cpp  test_tls_channel.cpp
test/unit/protocol/: test_admin_message.cpp  test_error_message.cpp  test_frame_message.cpp  test_hello_message.cpp  test_ifconfig_message.cpp  test_interface_name.cpp  test_interface_status_message.cpp  test_list_message.cpp  test_message_header.cpp  test_open_message.cpp  test_register_message.cpp  test_subscribe_message.cpp
test/unit/socketcand/: test_ascii_framer.cpp  test_beacon_xml.cpp  test_interface_catalogue.cpp  test_socketcand_bridge.cpp  test_socketcand_codec.cpp
test/unit/version/: test_version.cpp
web/: .gitignore  README.md  build-release.sh  openapi.yaml
web/daemon/: Cargo.toml
web/daemon/src/: admin_client.rs  api.rs  embedded.rs  hub_socket.rs  lib.rs  login_limiter.rs  main.rs  telemetry.rs
web/daemon/src/api/: dtos.rs  error.rs  handlers.rs  middleware.rs  mod.rs  tests.rs
web/daemon/src/auth/: mod.rs  password.rs  store.rs
web/daemon/src/protocol/: admin.rs  mod.rs
web/daemon/tests/: telemetry_pipe.rs
web/ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+185 files in other folders)
