[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "python-can-hub"
version = "0.2.7"
description = "python-can backend for can-hub: remote CAN interfaces over unix/tcp/tls/quic"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.9"
dependencies = ["python-can>=4.0"]

[project.urls]
Homepage = "https://github.com/can-hub-io/can-hub"

[project.entry-points."can.interface"]
canhub = "canhub.bus:CanHubBus"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["canhub"]

[tool.setuptools.package-data]
canhub = ["libcanhub.so", "libcanhub.dll"]
